# test-task-GlobalERP

./: README.md  pyproject.toml  ruff.toml
app/: build_tree.py  constants.py  entities.py  main.py
